@@ -85,12 +85,39 @@ DWORD	*crc_list_sig ( unsigned char *b, u_int32_t *n, int c, int *s) {
 }
 
 
-unsigned int  *order_tag_crc_offset ( u_int32_t *bl, DWORD *cr, unsigned int c, unsigned int b ) {
+unsigned int *list_sig ( u_int32_t *bl, DWORD *cr, unsigned int b ) {
 
-  u_int32_t    *r;
+  u_int32_t	*r;
   u_int32_t	l, t;
 
-  static int  compare_block (const void *v0, const void *v1)  {
+  r     =  (u_int32_t *)  malloc ( b * sizeof(u_int32_t) );
+
+  for ( l = t = 0; t < b; l++ )
+    if  ( cr[l].dword != 0xfff1fff1 )  r[t++] = l;
+
+  return  r;
+}
+
+
+TAG  *order_tag ( u_int32_t *r, DWORD *cr, unsigned int b, unsigned int c ) {
+
+  unsigned int	l, o;
+  int		loop;
+  u_int16_t	t;
+  u_int16_t	*tag;
+  TAG		*tags;
+  DWORD		crc;
+
+  static int  compare_tag (const void *v0, const void *v1)  {
+    u_int32_t	 p0,  p1;
+    int          diff;
+
+    if  ( tag[*(u_int32_t *)v0] > tag[*(u_int32_t *)v1] )  return   1;
+    else                                                   return  -1;
+  }
+
+
+  static int  compare_crc (const void *v0, const void *v1)  {
     u_int32_t	 p0,  p1;
     DWORD        c0,  c1;
     int          diff;
@@ -100,36 +127,52 @@ unsigned int  *order_tag_crc_offset ( u_int32_t *bl, DWORD *cr, unsigned int c, 
 
     c0  =  cr[ p0 ];
     c1  =  cr[ p1 ];
-
-    diff  =  crc_tag ( c0 )  -  crc_tag ( c1 );
-
-    if ( diff == 0 )
-    {
-            if  ( c0.dword > c1.dword )  diff =  1;
-      else  if  ( c0.dword < c1.dword )  diff = -1;
-      else
-      {
-        c0    =  cr[ p0 + 1 ];
-        c1    =  cr[ p1 + 1 ];
-              if  ( c0.dword > c1.dword )  diff =  1;
-        else  if  ( c0.dword < c1.dword )  diff = -1;
-        else
-        {
-          if  ( p0 > p1 )  diff =  1;
-          else             diff = -1;
-        }
-      }
+    if  ( c0.dword == c1.dword ) {
+      c0  =  cr[ p0 + 1];
+      c1  =  cr[ p1 + 1];
     }
+
+    if  ( c0.dword == c1.dword ) {
+      if  ( p0 > p1 )  diff =  1;
+      else             diff = -1;
+    }
+    else if  ( c0.dword > c1.dword )  diff =  1;
+    else                              diff = -1;
+
     return  diff;
   }
 
-  r   =  (u_int32_t *)  malloc ( b * sizeof(u_int32_t) );
+  tags  =                 malloc ( 0x10000 * sizeof(TAG) );
+  tag   =  (u_int16_t *)  malloc ( c * sizeof(u_int16_t) );
 
-  for ( l = t = 0; t < b; l++ )
-    if  ( cr[l].dword != 0xfff1fff1 )  r[t++] = l;
+  for ( l = 0; l < b; l++ ) {
+    o   =  r[l];
+    crc = cr[o];
+    if  ( crc.dword != 0xfff1fff1 )
+      tag[o] = crc_tag ( crc );
+  }
 
-  qsort(r, t, sizeof(u_int32_t), compare_block);
-  return  r;
+  qsort(r, b, sizeof(u_int32_t), compare_tag);
+
+  for ( loop = 0; loop < 0xffff ; )
+    tags[loop++].range = 0x0;
+
+  loop  =  b - 1;
+  while ( loop >= 0 )  {
+          t = tag[ r[loop] ];
+    tags[ t ].range++;
+    tags[ t ].index = loop--;
+  }
+
+  free ( tag );
+
+  for( loop = 0; loop < 0x10000; loop++ )
+    qsort( &r[tags[loop].index],
+              tags[loop].range,
+           sizeof(u_int32_t),
+           compare_crc);
+
+  return  tags;
 
 }
 
@@ -138,26 +181,12 @@ void make_index(INDEX *r, unsigned char *b, int s) {
 
   int    loop, size, o, t;
 
-  r->natural     =  natural_block_list    (b, s, &r->naturals);
-  r->crc         =  crc_list_sig          (b, r->natural, r->naturals, &r->ordereds);
-  r->ordered     =  order_tag_crc_offset  (r->natural, r->crc, r->naturals, r->ordereds);
-  r->tags        =  malloc ( 0x10000 * sizeof( TAG ) );
-
-  for ( loop = 0; loop < 0xffff ; )  {
-    r->tags[loop  ].index = 0xffffffff;
-    r->tags[loop++].range = 0x0;
-  }
-
-  loop  =  r->ordereds - 1;
-  while ( loop >= 0 )  {
-    t = crc_tag ( r->crc[ r->ordered[loop] ] );
-    r->tags[ t ].range++;
-    r->tags[ t ].index = loop--;
-  }
-
+  r->natural     =  natural_block_list  (b, s, &r->naturals);
+  r->crc         =  crc_list_sig        (b, r->natural, r->naturals, &r->ordereds);
+  r->ordered     =      list_sig        (r->natural, r->crc, r->ordereds);
+  r->tags        =  order_tag           (r->ordered, r->crc, r->ordereds, r->naturals);
 
 /*
-
   for    ( loop  =  0;  loop  <  0x10000;              loop++ )
     fprintf(stderr, "tag = %i range = %i\n", loop, r->tags[loop].range);
      
@@ -170,7 +199,7 @@ void make_index(INDEX *r, unsigned char *b, int s) {
              r->crc[r->ordered[ r->tags[loop].index + o]].dword
          ) ) fprintf(stderr, "Ordering is faulty 2\n");
     }
-
+  fprintf(stderr, "Done checking order\n");
 */
 
 }
